Bugfix release
Added support for sockets(if server doesn't support cUrl).
Added checking for socket timeouts and error responses.
Updated languages.
Changed function to show/hide profile info from toggle to fadeToggle.
Websites list now fixed by height(with vertical scrollbar).

--- a/plugins/content/gravatar/assets/css/gravatar.css
+++ b/plugins/content/gravatar/assets/css/gravatar.css
@@ -138,7 +138,10 @@ div.clear {
 }
 
 .gravatar-linked-web {
+	height: 180px;
 	margin: 0;
+	overflow: scroll;
+	overflow-x: hidden;
 	padding: 10px 0 0;
 }
 .gravatar-linked-web li {
